# laboratorio-adk-ucv

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.adk/: session.db
.github/workflows/: sonarqube.yml
agente_ucv/: agent.py
agente_ucv/.adk/: session.db
tests/: conftest.py  test_agent.py
