[project]
name = "laboratorio-adk-ucv"
version = "0.1.0"
description = "Laboratorio de Agentes IA UCV"
authors = [
    {name = "Katherine", email = "kagabrielco@ucvvirtual.edu.pe"}
]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.1"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false