[project]
name = "laboratorio-adk-ucv"
version = "0.1.0"
description = "Laboratorio de Agentes IA UCV"
authors = [
    {name = "Katherine", email = "kagabrielco@ucvvirtual.edu.pe"}
]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.1",
    "google-adk (>=2.1.0,<3.0.0)",
    "fastapi (>=0.136.3,<0.137.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
